完成js 計算貸款

--- a/css/index.css
+++ b/css/index.css
@@ -55,22 +55,30 @@ label {
     font-weight: bold;
 }
 
-#calcRule {
-    background-color: #C499F3;
-    border-radius: 6px;
+input {
+    text-align: center;
+    width: 50px;
+    font-size: 16px;
 }
 
 select,
 option {
     text-align: center;
-    width: 200px;
+    width: 50px;
     font-size: 16px;
 }
 
-select {
-    text-align: center;
-    width: 200px;
-    font-size: 16px;
+
+
+#calcRule {
+    background-color: #C499F3;
+    border-radius: 6px;
 }
 
-input
+#result {
+    /* display: none; */
+    width: 350px;
+    margin: 0 auto;
+    background-color: #F2AFEF;
+    padding: 12px;
+}
