--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@ body {
 }
 
 form {
+
     background-color: rgb(12, 198, 204);
     width: 350px;
     margin: 0 auto;
@@ -31,6 +32,7 @@ form {
 }
 
 #info {
+
     text-align: left;
     display: inline-block;
     margin: 12px auto;
@@ -81,4 +83,5 @@ option {
     margin: 0 auto;
     background-color: #F2AFEF;
     padding: 12px;
+    border-radius: 6px;
 }
