--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ form {
 button {
     width: 100px;
     border-radius: 6px;
-    border: 0px;
+    border: 5px;
     height: 24px;
     margin: 0 3px;
     background-color: beige;
@@ -84,4 +84,30 @@ option {
     background-color: #F2AFEF;
     padding: 12px;
     border-radius: 6px;
+}
+
+
+table {
+    margin: 0 auto;
+    width: 60%;
+    border: 1px solid black;
+    border-collapse: collapse;
+    background-color: bisque;
+}
+
+thead th {
+    background-color: burlywood;
+    border: 1px solid #F2F597;
+    font-size: 18px;
+
+
+}
+
+td {
+    border: 1px solid rgb(230, 16, 141);
+    padding: 6px;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #6a87db;
 }
